1st version solo complete

--- a/tex/2_referencial_teorico.tex
+++ b/tex/2_referencial_teorico.tex
@@ -35,6 +35,7 @@ Cada simulador possui características arquiteturais e objetivos próprios que f
 \begin{table}[]
     \hspace{-0.8cm}
     \begin{tabular}{rccccc}
+    \toprule
 
     \multirow{2}{25mm}{\textbf{Simulador}}      &
     \textbf{Nível de}                           &
@@ -87,6 +88,7 @@ Cada simulador possui características arquiteturais e objetivos próprios que f
         {MVC/AOP} &
         {Passos} \\
         
+    \bottomrule
 %     % {\textbf{HMR Sim*}} &
 %     %     {\begin{tabular}[c]{@{}c@{}}Médio /\\ Alto\end{tabular}} &
 %     %     {50 - 500} &
